# paralabs

./: .gitignore  .gitmodules  Makefile  README  code_OMP_Error.c  common.c  common.h  genseq.c  genseq.h  mergesort.c  paralabs.h  pp.h  quicksort.c  quicksort.h  sort.c  sort.h  t01.c  t02.c  t03.c  task01.c  task01_pt.c  task02.c  task02_pt.c  task03.c  task03_pt.c  task04.c  task04src_omp.c  task05.c  task06.c
2011/: Makefile  README  genseq.c  mergesort.h  quicksort.c  quicksort.h  sort.h  task01.c  task03.c  task04.c  task05.c
2011/hydra/: Makefile  Makefile.mingw  common.py  hwinfo.py  messenger.py
2011/os/: klpart.py  print.c
2011/os/ntfs/: Makefile  safe.h  sparse.c  stream.c
2011/os/prof/: README  hacker.c  prof.c
2012/: Makefile  README  task01.c  task02.c  task03.c  task04.c  test.py
2012/bank/: Makefile  bank  bank.c  event.c  event.h  queue.c  queue.h
2012/os/: filter.sh  ush.py
hydra/: .gitignore  CMakeLists.txt  Makefile  Makefile.mingw  build.py  client.py  common.py  hwinfo.py  hydra-client.py  hydra-server.py  messenger.py  server.py
hydra/cmake/modules/: FindPyInstaller.cmake  UsePyInstaller.cmake
hydra/prime/: myrand.h  number.h  primemodule.c  setup.cfg  setup.py  test.py
include/: pcheck.h
scheduler/: .gitignore  Makefile  client.py  common.py  hwinfo.py  protocol.py  server.py  test.py
scheduler/prime/: myrand.c  myrand.h  primemodule.c  setup.cfg  setup.py  test.py
